--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "formik": "^2.1.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.38",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
