--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "yup": "^0.29.1"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "react-scripts start",
     "start:local": "env-cmd .env.development npm run start",
     "build": "react-scripts build",
@@ -63,6 +64,7 @@
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "cypress": "^9.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
