--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start:local": "env-cmd .env.development npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --updateSnapshot",
+    "test:dev": "npm run start && npm run cypress:open",
     "test:watch": "react-scripts test --watchAll",
     "test:coverage": "react-scripts test --watchAll=false --coverage",
     "lint": "eslint --fix src/**/*.{ts,tsx}"
@@ -70,6 +71,7 @@
     "enzyme-to-json": "^3.5.0",
     "eslint-plugin-react": "^7.18.3",
     "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "sinon": "^9.0.0",
     "typescript": "^3.9.5"
   },
