jest-sonar no es soportado por create react app

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=CeibaADN-Ceiba-DeliverChefcitoFrontEnd(duber.galvis)
 # Configuracion del sonar para proyecto typescript
 sonar.sources=src/app
 sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts
-sonar.tests=src/app/feature
+sonar.tests=src/app/
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=../coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 #sonar.testExecutionReportPaths=
