--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.sources=src/app
 sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts
 sonar.tests=src/app/
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 #sonar.testExecutionReportPaths=
