se organiza para sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=co.com.ceiba.adn:ceiba.deliverchefcitofrontend-duber.galvis
 sonar.projectName=CeibaADN-Ceiba-DeliverChefcitoFrontEnd(duber.galvis)
 
 # Configuracion del sonar para proyecto typescript
-sonar.sources=src/app
+sonar.sources=src
 sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts
 sonar.tests=src/app/
 sonar.test.inclusions=**/*.spec.ts
