se ajusta prueba que falla y archivo modificarpedido

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.sources=src
 sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/interceptor/*.ts
 sonar.tests=src/app/
 sonar.test.inclusions=**/*.spec.ts
-sonar.typescript.lcov.reportPaths=../coverage/lcov.info
+sonar.typescript.lcov.reportPaths=/coverage/lcov.info
 #sonar.testExecutionReportPaths=
