--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --updateSnapshot",
     "test:watch": "react-scripts test --watchAll",
-    "test:coverage": "react-scripts test --watchAll=false --coverage",
+    "test:coverage": "react-scripts test --watchAll=false --updateSnapshot --coverage",
     "lint": "eslint --fix src/**/*.{ts,tsx}"
   },
   "eslintConfig": {
