--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "react-scripts start",
     "start:local": "env-cmd .env.development npm run start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false --updateSnapshot",
+    "test": "cross-env CI=true react-scripts test --silent --env=jsdom --coverage --testResultsProcessor jest-sonar-reporter --updateSnapshot",
     "test:watch": "react-scripts test --watchAll",
     "test:coverage": "react-scripts test --watchAll=false --updateSnapshot --coverage",
     "lint": "eslint --fix src/**/*.{ts,tsx}"
@@ -69,7 +69,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
     "eslint-plugin-react": "^7.18.3",
-    "jest-sonar": "^0.2.12",
+    "jest-sonar-reporter": "^2.0.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "sinon": "^9.0.0",
