--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,4 @@ sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.directive.ts,**/intercep
 sonar.tests=src/app/
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=testResults/sonar-report
+sonar.testExecutionReportPaths=testResults/sonar-report.xml
